# eMetaPy

./: .gitignore  .main.py.swp  README.md  auth.py  card.py  main.py  metaAuth.py  query.py  setup.cfg  user.py
emeta/: __init__.py  emeta.py
emeta/old/: auth.py  card.py  meta.py  query.py
emetapy/: meta.py
src/: __init__.py  auth.py  query.py
src/old/: user.py
test/: emeta_base_test.py  test_script.py
tests/: test_save.env.test  test_token.env.test  test_token_expired.env.test  tests.py
