[metadata]
name = emetapy
version = 0.0.4
author = David Paul Graham
author_email = graham.david@epa.gov
license = MIT
description = These are functions to use metabase APIs that I had duplicated in many places at work
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dpgraham4401/eMetaPy

[options]
packages = emetapy
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = emeta